# floc

./: .editorconfig  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: generate-shared-lib.yml  test.yml
docs/: api.rst  conf.py  index.rst  requirements.txt
floc/: __init__.py  go_types.py  hashes.py  simulate.py  sorting.py
floc/floc_go/: __init__.py  floc_go-darwin.h  floc_go-linux.h
floc_simulator/: main.go
floc_simulator/demos/floc_sample/: main.go
tests/: test_floc.py
tests/test_hashes/: test_sim_hash_string.py
tests/test_simulate/: test_simulate.py
